; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_foreign_key_relationship.c_ClearForeignConstraintRelationshipGraphContext.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_foreign_key_relationship.c_ClearForeignConstraintRelationshipGraphContext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@fConstraintRelationshipGraph = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ClearForeignConstraintRelationshipGraphContext() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fConstraintRelationshipGraph, align 8
  %2 = icmp eq %struct.TYPE_2__* %1, null
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %9

4:                                                ; preds = %0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @fConstraintRelationshipGraph, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @hash_destroy(i32 %7)
  store %struct.TYPE_2__* null, %struct.TYPE_2__** @fConstraintRelationshipGraph, align 8
  br label %9

9:                                                ; preds = %4, %3
  ret void
}

declare dso_local i32 @hash_destroy(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
